fix:修复数据更新bug